refactor: Apply UTF_8 Constant instead of literal string